面试评审评委端修改

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
@@ -67,9 +67,9 @@ Ext.onReady(function(){
 	}
 })
 $(function(){
-	$("#tz_zlps_loading").height(Ext.getBody().getHeight()-58-37);
-	$("#tz_zlps_pclb").height(Ext.getBody().getHeight()-58-37);
-	$("#tz_zlps_container").width(Ext.getBody().getWidth()*3);
+	$("#tz_msps_loading").height(Ext.getBody().getHeight()-58-37);
+	$("#tz_msps_pclb").height(Ext.getBody().getHeight()-58-37);
+	$("#tz_msps_container").width(Ext.getBody().getWidth()*3);
 });
 </script>
 </head>
@@ -140,12 +140,12 @@ $(function(){
 			</div>
 		</div>
 		<!-- evaluation main end -->
+		<div class="clear"></div>
+		<!-- foot start -->
+		<div id="footarea" class="footer assdiv" style="background-color:#fff;/*position:absolute;bottom:0;left:0*/">
+	  	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
+	    </div>
   </div>
 	<!-- content end --> 
-	<div class="clear"></div>
-	<!-- foot start -->
-	<div id="footarea" class="footer assdiv" style="background-color:#fff;">
-  	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
-    </div>
 </div></body>
 </html>
