材料评审查看横版报名表

--- a/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MSPS_STULIST_HTML.html
+++ b/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MSPS_STULIST_HTML.html
@@ -10,5 +10,6 @@
 	"progress":"%bind(:9)",
 	"viewQua":"%bind(:10)",
 	"oprID":"%bind(:11)",
-	"mshID":"%bind(:12)"
+	"mshID":"%bind(:12)",
+	"clpsBmbTplId":"%bind(:13)"
 }
