--- a/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_CLPS_KSINFO_HTML.html
+++ b/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_CLPS_KSINFO_HTML.html
@@ -1,1 +1,1 @@
-{"insID":"%bind(:1)","name":"%bind(:2)","gender":"%bind(:3)","viewQUA":"%bind(:7)","aveScore":"%bind(:8)","judgePC":"%bind(:4)","judgeInfo":"%bind(:5)","judgeStatus":"%bind(:6)","progress":"%bind(:9)","classID":"%bind(:10)","batchID":"%bind(:1)","oprID":"%bind(:12)"}
+{"insID":"%bind(:1)","name":"%bind(:2)","gender":"%bind(:3)","viewQUA":"%bind(:7)","aveScore":"%bind(:8)","judgePC":"%bind(:4)","judgeInfo":"%bind(:5)","judgeStatus":"%bind(:6)","progress":"%bind(:9)","classID":"%bind(:10)","batchID":"%bind(:1)","oprID":"%bind(:12)","clpsBmbTplId":"%bind(:13)"}
