--- a/src/main/resources/html/TZInterviewAppointmentBundle/TZ_M_MS_APPOINT_MAIN_HTML.html
+++ b/src/main/resources/html/TZInterviewAppointmentBundle/TZ_M_MS_APPOINT_MAIN_HTML.html
@@ -18,7 +18,7 @@
 	   <div class="bg">
 	     <!-- 头部 -->
 	   	 <div class="topbar">
-	   	    在线预约 <a  href="javascript:history.back();"><i></i></a>
+	   	    面试预约 <a  href="javascript:history.back();"><i></i></a>
 	   	 </div>
 	   	 <div class="order_sm">
 	   	 <!-- 文字说明 -->
