--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_KJCD_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_KJCD_HTML.html
@@ -6,7 +6,7 @@
 	   	 <li class="icons_list"><a href="%bind(:4)"><img src="%bind(:1)/statics/css/website/m/images/icon3.png"><p>报考中心</p></a></li>
 	 </div>
 	 <div class="icons">
-	   	 <li class="icons_list"><a href="%bind(:5)"><img src="%bind(:1)/statics/css/website/m/images/icon4.png"><p>在线预约</p></a></li>
+	   	 <li class="icons_list"><a href="%bind(:5)"><img src="%bind(:1)/statics/css/website/m/images/icon4.png"><p>面试预约</p></a></li>
 	   	 <li class="icons_list"><a href="%bind(:6)"><img src="%bind(:1)/statics/css/website/m/images/icon5.png"><p>资料专区</p></a></li>
 	   	 <li class="icons_list"><a href="%bind(:7)"><img src="%bind(:1)/statics/css/website/m/images/icon6.png"><p>常见问题</p></a></li>
 	 </div>
