Bug6613 【可以进行迁移】后台报名表审核，学生报名表编辑页面，可以上传图片，但是保存不了

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
@@ -230,7 +230,7 @@
 				                    success:function(html){
 				                        if(html.comContent.success == "Y"){
 				 							window.parent.$("#photo").attr("src", "%bind(:20)"+html.comContent.url);					
-											window.SurveyBuild && window.parent.$("#photo").parent().parent().find('input[type="hidden"]').val(html.comContent.url);
+											window.parent.SurveyBuild && window.parent.$("#photo").parent().parent().find('input[type="hidden"]').val(html.comContent.url);
 											//做如下修改 以适用分组框 modity by caoy
 											//layer.close(layer.index);
 											$("#loading").fadeOut();
