面试评审评委端触屏版修改。

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_INDEX.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<title>清华大学经济管理学院MBA面试评审系统</title>
-	<link rel="stylesheet" href="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile.flatui.min.css" />	
+	<link rel="stylesheet" href="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-1.4.5.min.css" />	
 	<script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-migrate-1.2.1.js"></script>
 	<script type="text/javascript" src="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
@@ -18,9 +18,9 @@
 
 <body> 
 
-<div data-role="page" data-theme="c">
+<div data-role="page" data-theme="a">
 
-	<div data-role="header" data-theme="a">
+	<div data-role="header" data-theme="b">
 
 		<div style="text-align:center; padding-top:12px; float:left" class="r-action" id="tz_welcome">
 		
@@ -51,7 +51,7 @@
 			</div><!--/content-primary -->		
 	</div><!-- /content -->
 	
-	<div data-role="footer" data-theme="a">
+	<div data-role="footer" data-theme="b">
 		<h4>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</h4>
 	</div><!-- /footer -->
 	
