--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <title>清华大学经济管理学员MBA面试评审系统</title> 
-<link rel="stylesheet" href="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile.flatui.min.css" />	
+	<link rel="stylesheet" href="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-migrate-1.2.1.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
@@ -31,15 +31,16 @@ caption {
 }
 th {
 	font: bold 14px "trebuchet ms", verdana, arial, helvetica, sans-serif;
-	color: #4f6b72;
-	border-right: 1px solid #c1dad7;
-	border-bottom: 1px solid #c1dad7;
-	border-top: 1px solid #c1dad7;
+	color: #eee;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #ccc;
 	letter-spacing: 2px;
 	text-transform: uppercase;
 	text-align: left;
-	padding: 6px 6px 6px 12px;
-	background: #cae8ea;
+	padding: 5px 5px 5px 10px;
+	background: #777;
+	text-shadow:none;
 }
 
 .alt {
@@ -50,30 +51,31 @@ th {
 	padding: 6px 6px 6px 12px;
 	color: #4f6b72;
 }
+
 </style>
 
 </head> 
 
 <body> 
 
-<div data-role="page" data-theme="c">
+<div data-role="page" data-theme="a">
 
-	<div data-role="header" data-theme="a">
+	<div data-role="header" data-theme="b">
 
-			<div style="text-align:center;  float:left" class="r-action">
-				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-inline="true" data-icon="back">返回</a>
+			<div style="text-align:center;float:left;margin-left:6px;" class="r-action">
+				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="back">返回</a>
 						&nbsp;&nbsp;欢迎%bind(:3)评委登录MBA面试评审系统&nbsp;&nbsp;&nbsp;%bind(:6) %bind(:7)	
 			</div>		
 			<div style="text-align:right; " class="r-action">			
-				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-inline="true" data-icon="home">首页</a>		
+				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="home">首页</a>		
 
-				<a href="/psc/CRMTST/EMPLOYEE/CRM/s/WEBLIB_PW_XGMM.TZ_PW_XGMM.FieldFormula.Iscript_ResetPw" target="_blank" id="gotocomment" data-role="button" data-inline="true" data-icon="star" >修改密码</a>			
-				<a href="../../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-icon="delete">退出</a>		
+				<a href="/psc/CRMTST/EMPLOYEE/CRM/s/WEBLIB_PW_XGMM.TZ_PW_XGMM.FieldFormula.Iscript_ResetPw" data-theme="b" target="_blank" id="gotocomment" data-role="button" data-inline="true" data-icon="star" >修改密码</a>			
+				<a href="../../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="b" data-icon="delete">退出</a>		
 			</div>
 	</div><!-- /header -->
 
 	<div data-role="content" data-theme="a">	
-		<div data-role="collapsible" data-collapsed="false" data-theme="a" data-content-theme="f" class="con-tag smallerr">
+		<div data-role="collapsible" data-collapsed="false" style="background:#fff" data-theme="a" data-content-theme="a" class="con-tag smallerr">
 			<h3>搜索考生</h3>
 
 				<table border="0">
@@ -87,20 +89,20 @@ th {
 				</tr>
 				</table>
 
-				<a href="javascript:void(0);" id="favrecipelink" onclick="searchfor()"  data-role="button" data-inline="true" data-theme="c" data-icon="search">查 找</a>
+				<a href="javascript:void(0);" id="favrecipelink" onclick="searchfor()"  data-role="button" data-inline="true" data-mini="true" data-theme="c" data-icon="search">查 找</a>
 				<a href="javascript:void(0);" id="favrecipelink" onclick="jxps()" data-role="button" data-inline="true" data-mini="true" data-theme="c" data-icon="arrow-r">进行评审</a>
 
 		</div>	
 
-		<div data-role="collapsible" data-theme="a" data-content-theme="f" class="con-tag smallerr" >
+		<div data-role="collapsible" data-theme="a" data-content-theme="a" class="con-tag smallerr" >
 			<h3>评审说明</h3>
 			<div  id="description"></div>
 		</div>	
 
-		<div data-role="collapsible" data-theme="a" data-content-theme="f" class="con-tag smallerr">
+		<div data-role="collapsible" data-theme="a" data-content-theme="a" class="con-tag smallerr">
 			<h3>评审打分统计信息区</h3>
 			<div id="ypsinfo"></div>
-			<div data-role="collapsible" data-theme="c" data-content-theme="f" data-collapsed="false" id="pwkj_tjb1">
+			<div data-role="collapsible" data-theme="a" data-content-theme="a" data-collapsed="false" id="pwkj_tjb1">
 				<h3>已评审考生得分统计</h3>
 
 				<div id="statistics1">
@@ -109,7 +111,7 @@ th {
 
 			</div>
 
-			<div data-role="collapsible" data-theme="c" data-content-theme="f" data-collapsed="false" id="pwkj_tjb2">
+			<div data-role="collapsible" data-theme="a" data-content-theme="a" data-collapsed="false" id="pwkj_tjb2">
 				<h3>已评审考生得分分布统计</h3>
 
 					<div id="statistics2">
@@ -120,7 +122,7 @@ th {
 
 		
 			</div>
-			<div data-role="collapsible" data-theme="c" data-content-theme="f" data-collapsed="false" id="columnGroup" >
+			<div data-role="collapsible" data-theme="a" data-content-theme="a" data-collapsed="false" id="columnGroup" >
 				<h3>各统计指标得分区间人数比率分布统计曲线图</h3>
 
 							<div id="container1_0" align="center"  ></div>  
@@ -130,7 +132,7 @@ th {
 			
 			</div>
 
-			<div data-role="collapsible" data-theme="c" data-content-theme="f" data-collapsed="false" id="columnFbt"  >
+			<div data-role="collapsible" data-theme="a" data-content-theme="a" data-collapsed="false" id="columnFbt"  >
 						<h3>指标统计柱状图</h3>
 							<div id="container2_0" align="center" ></div>
 							<div id="container2_1" align="center" ></div>
@@ -139,7 +141,7 @@ th {
 			</div>
 				
 		</div>
-		<div data-role="collapsible" data-collapsed="false" data-theme="a" data-content-theme="f" class="con-tag smallerr">
+		<div data-role="collapsible" data-collapsed="false" data-theme="a" data-content-theme="a" class="con-tag smallerr">
 				<h3>当前已经归属我的评委考生列表</h3>
 						<div id="examerinfo">
 
@@ -156,14 +158,14 @@ th {
 
 		<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-corners="false"  data-position-to="origin">
 
-				<div data-role="header" data-theme="b" role="banner" >
-					<a href="#" data-rel="back" data-role="button" data-theme="b" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+				<div data-role="header" data-theme="a" role="banner" >
+					<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
 					<h1  role="heading" aria-level="1">提示</h1>
 				</div>
 				<div data-role="content" data-theme="d" role="main" align="center">
-					<h3>确定要移除考生【<span id="ks_name"></span>】吗？</h3>
+					<p>确定要移除考生【<span id="ks_name"></span>】吗？</p>
 					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" >&nbsp;&nbsp;否&nbsp;&nbsp;</a>    
-					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" onClick="ycks();" data-theme="b" data-transition="flow">&nbsp;&nbsp;是&nbsp;&nbsp;</a>  
+					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" onClick="ycks();" data-theme="a" data-transition="flow">&nbsp;&nbsp;是&nbsp;&nbsp;</a>  
 					<input type="hidden" id="tz_hide_ksname" name="tz_hide_ksname" value="">
 					<input type="hidden" id="tz_hide_bmbid" name="tz_hide_bmbid" value="">
 				</div>
@@ -171,20 +173,20 @@ th {
 
 		<div data-role="popup" id="popupDialogSubmit" data-overlay-theme="a" data-corners="false"  data-position-to="origin">
 
-				<div data-role="header" data-theme="b" role="banner" >
-					<a href="#" data-rel="back" data-role="button" data-theme="b" data-icon="delete" data-iconpos="notext" onClick="" class="ui-btn-right">Close</a>
+				<div data-role="header" data-theme="a" role="banner" >
+					<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" onClick="" class="ui-btn-right">Close</a>
 					<h1  role="heading" aria-level="1">提示</h1>
 				</div>
-				<div data-role="content" data-theme="d" role="main" align="center">
+				<div data-role="content" data-theme="a" role="main" align="center">
 					<P style="text-align:left">是否提交本次评议的全部考生信息？<BR/>提交后将无法对考生评议成绩进行修改，是否继续？</P>
 					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" >&nbsp;&nbsp;否&nbsp;&nbsp;</a>    
-					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" onclick="submitall();" data-theme="b" data-transition="flow">&nbsp;&nbsp;是&nbsp;&nbsp;</a>  
+					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" onclick="submitall();" data-theme="c" data-transition="flow">&nbsp;&nbsp;是&nbsp;&nbsp;</a>  
 				</div>
 		</div>
 	</div><!-- /content -->
 
 	
-	<div data-role="footer" data-theme="a">
+	<div data-role="footer" data-theme="b" >
 		<h4>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</h4>
 	</div><!-- /footer -->
 	
