面试评审评委端触屏版修改。

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
@@ -64,12 +64,12 @@ th {
 
 			<div style="text-align:center;float:left;margin-left:6px;" class="r-action">
 				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="back">返回</a>
-						&nbsp;&nbsp;欢迎%bind(:3)评委登录MBA面试评审系统&nbsp;&nbsp;&nbsp;%bind(:6) %bind(:7)	
+						&nbsp;欢迎%bind(:3)评委登录MBA面试评审系统&nbsp;%bind(:6) %bind(:7)	
 			</div>		
 			<div style="text-align:right; " class="r-action">			
 				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="home">首页</a>		
 				<!-- a href="%bind(:8)" target="_blank" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="info">联系方式</a-->
-				<a href="/psc/CRMTST/EMPLOYEE/CRM/s/WEBLIB_PW_XGMM.TZ_PW_XGMM.FieldFormula.Iscript_ResetPw" data-theme="b" target="_blank" id="gotocomment" data-role="button" data-inline="true" data-icon="star" >修改密码</a>			
+				<a href="javascript:void(0);" data-theme="b" target="_blank" id="gotocomment" data-role="button" data-inline="true" data-icon="star" >修改密码</a>			
 				<a href="../../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="b" data-icon="delete">退出</a>		
 			</div>
 	</div><!-- /header -->
