面试评审PAD版修改密码

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
-<title>清华大学经济管理学员MBA面试评审系统</title> 
+<title>清华大学经济管理学院MBA面试评审系统</title> 
 <link rel="stylesheet" href="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-migrate-1.2.1.js"></script>
@@ -69,8 +69,8 @@ th {
 			<div style="text-align:right; " class="r-action">			
 				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="home">首页</a>		
 				<!-- a href="%bind(:8)" target="_blank" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="info">联系方式</a-->
-				<a href="javascript:void(0);" data-theme="b" target="_blank" id="gotocomment" data-role="button" data-inline="true" data-icon="star" >修改密码</a>			
-				<a href="../../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="b" data-icon="delete">退出</a>		
+				<a href="javascript:void(0);" data-theme="b" target="_blank" id="gotocomment" data-role="button" data-inline="true" data-icon="star" >修改密码</a>
+				<a href="../../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="b" data-icon="delete">退出</a>
 			</div>
 	</div><!-- /header -->
 
