--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
-<title>清华大学经济管理学员MBA面试评审系统</title> 
+<title>清华大学经济管理学院MBA面试评审系统</title>
 
 <link rel="stylesheet" href="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-1.11.1.min.js"></script>
@@ -17,6 +17,7 @@
 	var BatchId = "%bind(:5)";
 	var AppInsId = "%bind(:6)";
 	var AppTplId = "%bind(:10)";
+	var scoreUrl = "%bind(:1)/dispatcher";
 	
 	var dfq_arr ;//取数组
 
@@ -96,21 +97,20 @@ th {
 
 				<table style="border:0">
 					<tr >
-						<td><input type="search" name="ks_serch_msid" id="ks_serch_msid" value=""  placeholder="请输入考生申请号" data-mini="true" data-inline="true" /></td>
+						<td><input type="search" name="ks_search_msid" id="ks_search_msid" value=""  placeholder="请输入考生申请号" data-mini="true" data-inline="true" /></td>
 						<td>或</td>
-						<td><input type="search" name="ks_serch_name" id="ks_serch_name" value=""  placeholder="请输入考生姓名" data-mini="true" /></td>
-						<td><input id="ks_serch_tz_app_ins_id" name="ks_serch_tz_app_ins_id" value="100005729" type="hidden"/></td>
-						<td><input id="ks_serch_TZ_APPLY_DIRC_ID" name="ks_serch_TZ_APPLY_DIRC_ID" value="1005" type="hidden"/></td>
-						<td><input id="ks_iframe_str_id" name="ks_iframe_str_id" value="bmb_iframe_1005_100005729" type="hidden"/></td>
-						<td><input id="ks_ture_id" name="ks_ture_id" value="Y"  type="hidden"/></td>
-						<td><input id="ks_show_tz_app_ins_id" name="ks_show_tz_app_ins_id" value="100005729" type="hidden"/></td>
+						<td><input type="search" name="ks_search_name" id="ks_search_name" value=""  placeholder="请输入考生姓名" data-mini="true" /></td>
+						<td><input id="ks_search_tz_app_ins_id" name="ks_search_tz_app_ins_id" value="" type="hidden"/></td>
+						<td><input id="ks_iframe_str_id" name="ks_iframe_str_id" value="" type="hidden"/></td>
+						<td><input id="ks_show_dfq" name="ks_show_dfq" value="Y"  type="hidden"/></td>
+						<td><input id="ks_show_tz_app_ins_id" name="ks_show_tz_app_ins_id" value="" type="hidden"/></td>
 					</tr>
 					<tr>
-						<td colspan="3"><div id="ks_look_back_info">&nbsp;&nbsp;请输入考生申请号或姓名进行搜索</div></td>
+						<td colspan="3"><div id="ks_look_back_info">请输入考生申请号或姓名进行搜索</div></td>
 					</tr>
 				</table>				  
-				<a href="javascript:void(0);" id="ks_serch_look"  onclick="ks_look();"   data-role="button" data-inline="true" data-mini="true" data-icon="search">查 找</a>
-				<a href="javascript:void(0);" id="ks_serch_pingsheng"  onclick="ks_pingsheng();" data-role="button" data-inline="true" data-mini="true" data-icon="arrow-r">进行评审</a>
+				<a href="javascript:void(0);" id="ks_search_look"  onclick="ks_look();"   data-role="button" data-inline="true" data-mini="true" data-icon="search">查 找</a>
+				<a href="javascript:void(0);" id="ks_search_pingsheng"  onclick="ks_pingsheng();" data-role="button" data-inline="true" data-mini="true" data-icon="arrow-r">进行评审</a>
 
 		</div>	
 	
@@ -149,7 +149,7 @@ th {
 
 					<form id="ks_dfq_form" >	
 							<p>
-								<table>
+								<table width="70%">
 								   <tr>
 								      <td>
 										<b>面试申请号：<span  id="ks_dfq_ms_id" >-</span></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -161,18 +161,23 @@ th {
 											<a href="#" data-role="none" rel="external" id="ks_new_w_bmb" target="_blank" class="ui-link">新开窗口看考生材料</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 								      </td>
-								      <td>
+								     <!-- <td>
 											<a href="#TZ_dialog" data-rel="popup"  data-role="none"   class="ui-link" >补充提示信息</a>
-								      </td>
+								      </td>-->
 								   </tr>
+
 								</table>
 							</p>
-
 							<p>
-									&nbsp;<b>材料评审成绩参考：<span  id="ps_clpscj_pjf">-</span></b> 
-									<div id="ks_dfq_cjx" style="display:block"></div>
-									<table style="width:100%">
-										 	
+								<div id="div_sx_ksbq">
+									<b>考生标签：<span  id="ps_sx_ksbq">-</span></b>
+									<div id="ks_sx_ksbq" style="display:block"></div>
+								</div>
+							</p>
+							<p>
+									<b><span  id="ps_clpscj_ck"></span></b>
+									<table width="100%">
+										<div id="ks_dfq_cjx" name="ks_dfq_cjx" style="display:block"></div>
 											<tr>
 												<td colspan='2'>&nbsp;&nbsp;&nbsp;&nbsp;
 													<a href="javascript:void(0);" id="ks_save_bt" onclick="ks_save();"  data-role="button" data-inline="true" data-mini="true" data-icon="check">保 存</a>												
