--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <title>清华大学经济管理学院MBA面试评审系统</title> 
-<link rel="stylesheet" href="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet" href="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-sem.css" />
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-migrate-1.2.1.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
@@ -31,7 +31,7 @@ caption {
 }
 th {
 	font: bold 14px "trebuchet ms", verdana, arial, helvetica, sans-serif;
-	color: #eee;
+	color: #333;
 	border-right: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
 	border-top: 1px solid #ccc;
@@ -39,7 +39,7 @@ th {
 	text-transform: uppercase;
 	text-align: left;
 	padding: 5px 5px 5px 10px;
-	background: #777;
+	background: #eee;
 	text-shadow:none;
 }
 
@@ -49,7 +49,7 @@ th {
 	background: #fff;
 	font-size:14px;
 	padding: 6px 6px 6px 12px;
-	color: #4f6b72;
+	color: #333;
 }
 
 </style>
@@ -63,14 +63,35 @@ th {
 	<div data-role="header" data-theme="b">
 
 			<div style="text-align:center;float:left;margin-left:6px;" class="r-action">
-				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="back">返回</a>
+				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="a" data-inline="true" data-icon="back">返回</a>
 						&nbsp;欢迎%bind(:3)评委登录MBA面试评审系统&nbsp;%bind(:6) %bind(:7)	
 			</div>		
 			<div style="text-align:right; " class="r-action">			
-				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="home">首页</a>		
+				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="a" data-inline="true" data-icon="home">首页</a>		
 				<!-- a href="%bind(:8)" target="_blank" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="info">联系方式</a-->
-				<a href="javascript:void(0);" data-theme="b" target="_blank" id="gotocomment" data-role="button" data-inline="true" data-icon="star" >修改密码</a>
-				<a href="../../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="b" data-icon="delete">退出</a>
+				<a href="#modifyPswdPopup"  id="modifyPswd" data-rel="popup" data-role="button" data-inline="true" data-theme="a" data-icon="star" >修改密码</a>
+				<a href="../../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="a" data-icon="delete">退出</a>
+			</div>
+			<div data-role="popup" id="modifyPswdPopup" data-position-to="window" data-dismissible="false" data-overlay-theme="b" style="min-width:350px;">
+				<a href="#" data-rel="back" id="closeModify" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">关闭</a>
+				<form method="post" id="modifyForm" data-ajax="false">
+					<div>
+						<div data-role="header" role="banner" data-theme="b">
+							<h3>修改密码</h3>
+						</div>
+						<div class="ui-field-contain" style="margin:10px 15px">
+							<label for="oldPswd">原密码:</label>
+							<input type="password" name="oldPswd" id="oldPswd">
+							<label for="newPswd" style="margin-top:5px;">新密码:</label>
+							<input type="password" name="newPswd" id="newPswd">
+							<label for="confirmPswd" style="margin-top:5px;">确认新密码:</label>
+							<input type="password" name="confirmPswd" id="confirmPswd">
+						</div>
+						<div align="center">
+						<a href="javascript:void(0);" data-role="button" data-inline="true" id="ensureModify">&nbsp;&nbsp;确定&nbsp;&nbsp;</a> 
+						</div>					
+					</div>
+				</form>
 			</div>
 	</div><!-- /header -->
 
@@ -143,7 +164,7 @@ th {
 		</div>
 		<div data-role="collapsible" data-collapsed="false" data-theme="a" data-content-theme="a" class="con-tag smallerr">
 				<h3>当前已经归属我的评委考生列表</h3>
-						<div id="examerinfo">
+						<div id="examerinfo" style="overflow-x:auto">
 
 
 						</div>
@@ -158,7 +179,7 @@ th {
 
 		<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-corners="false"  data-position-to="origin">
 
-				<div data-role="header" data-theme="a" role="banner" >
+				<div data-role="header" data-theme="b" role="banner" >
 					<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
 					<h1  role="heading" aria-level="1">提示</h1>
 				</div>
@@ -173,7 +194,7 @@ th {
 
 		<div data-role="popup" id="popupDialogSubmit" data-overlay-theme="a" data-corners="false"  data-position-to="origin">
 
-				<div data-role="header" data-theme="a" role="banner" >
+				<div data-role="header" data-theme="b" role="banner" >
 					<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" onClick="" class="ui-btn-right">Close</a>
 					<h1  role="heading" aria-level="1">提示</h1>
 				</div>
@@ -191,6 +212,63 @@ th {
 	</div><!-- /footer -->
 	
 </div><!-- /page -->
+<script type="text/javascript">
+		//修改密码-确定
+		$("#ensureModify").click(function() {
+			//旧密码
+			var oldPassword = $("#oldPswd").val();
+			//新密码
+			var newPassword = $("#newPswd").val();
+			//确认新密码
+			var confirmPassword = $("#confirmPswd").val();
 
+			var bl = true;
+			if(oldPassword!="" && newPassword!="" && confirmPassword!="") {
+				//密码
+				if(newPassword != confirmPassword){
+					alert("两次密码输入不一致。");
+					bl =  false;
+				} else {
+					//新旧密码不能相同
+					if(oldPassword == newPassword) {
+						alert("新旧密码不能相同。");
+						bl =  false;
+					} else {
+						bl =  true;
+					}
+				}
+			} else {
+				alert("请填写所有信息项。");
+				bl =  false;
+			}
+
+
+			if(bl) {
+				var formParams= '{"oldPwd":"'+oldPassword+'","newPwd":"'+newPassword+'","comfirmPwd":"'+confirmPassword+'"}';
+				var tzParams = '{"ComID":"TZ_GD_XGPWD_COM","PageID":"TZ_GD_XGPWD_STD","OperateType":"U","comParams":{"update":['+formParams+']}}';
+				var modiftyUrl = ContextPath+"/dispatcher";
+				$.ajax({
+					type: 'POST',
+					dataType: "json",
+					url: modiftyUrl,
+					data: {"tzParams":tzParams},
+					success: function(data) {
+						var errcode = data.state.errcode;
+						if(errcode!="0"){
+							alert(data.state.errdesc);
+						} else {
+							$("#oldPswd").val("");
+							$("#newPswd").val("");
+							$("#confirmPswd").val("");
+
+							alert("密码修改成功！");
+
+							$("#closeModify").trigger("click");
+						}
+					}
+				});
+			}
+		});
+</script>
 </body>
 </html>
