手机报名表

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -55,6 +55,7 @@
 		MsgSet = %bind(:14);
 		UserInfoSet = %bind(:28);
 		SurveyBuild.tzGeneralURL = "%bind(:1)"; //统一接口
+		SurveyBuild.accessType = "P";	
 		SurveyBuild.refLetterId = "%bind(:6)"; //推荐信编号
 		SurveyBuild.classId = "%bind(:5)"; //报考班级
 		SurveyBuild.BMB_LANG = "%bind(:15)";
