--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_LOGIN.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_LOGIN.html
@@ -40,7 +40,7 @@
 							<img class="confirm_img" id="yzmImg" src="">							
 							<a href="javascript:void(0)" class="update">看不清楚？</a>
 						</div>
-						<div class="login_number" style="margin-left:100px;">
+						<div class="login_number" style="margin-left:100px;display:none;">
 							<label for="pc" style="margin-right:20px;">
 								<input type="radio" name="device" class="radio_7" id="pc" value="pc" checked="">PC版
 							</label>
