--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT2.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT2.html
@@ -129,7 +129,7 @@ var tzGeneralURL = "%bind(:1)";
 	</script>
 	<div class="bg1">
 	     <!-- 头部 -->
-	   	 <div class="topbar" style="position: relative;width:100%;height:2.2rem;background:url(../images/top_bar.png)no-repeat 0 0;background-size:100%;font-size:0.6rem;line-height:2.2rem;text-align: center;color:#2d5c9f;">
+	   	 <div class="topbar2" style="position: relative;width:100%;height:2.2rem;background:url(/university/statics/images/appeditor/m/top_bar.png)no-repeat 0 0;background-size:100%;font-size:0.6rem;line-height:2.2rem;text-align: center;color:#2d5c9f;">
 	   	 	   	 
 	   	    %bind(:6) <a  href="javascript:void(0)" class="return_r"    onclick="returnResi()"><i></i></a>
 	   	 </div>
@@ -141,7 +141,7 @@ var tzGeneralURL = "%bind(:1)";
 		</div>
 		<div class="pop_search">
 			<input type="text" name="search-text" id="search-text"
-				style="width: 88%; border: 1px solid #ddd; border-radius: 5px; text-indent: 8px;">
+				style="width: 88%; border: 1px solid #ddd; border-radius: 5px; text-indent: 8px;float:left;">
 			<a href="javascript:void(0)" id="search" onclick="findData()"><i></i></a>
 		</div>
 		<div class="pop_chose">%bind(:3)</div>
@@ -149,11 +149,9 @@ var tzGeneralURL = "%bind(:1)";
 			<li onclick="setTab(0,this);" title="非洲 Africa">非洲 Africa</li>
 			<li onclick="setTab(1,this);" title="亚洲 Asia">亚洲 Asia</li>
 			<li onclick="setTab(2,this);" title="欧洲 Europe">欧洲 Europe</li>
-			<li onclick="setTab(3,this);" title="北美洲 North America">北美洲
-				North America</li>
+			<li onclick="setTab(3,this);" title="北美洲 North America">北美洲 North America</li>
 			<li onclick="setTab(4,this);" title="大洋洲 Pacific">大洋洲 Pacific</li>
-			<li onclick="setTab(5,this);" title="南美洲 South America">南美洲
-				South America</li>
+			<li onclick="setTab(5,this);" title="南美洲 South America">南美洲 South America</li>
 
 		</ul>
 		<!-- <a href="javascript:void(0)" class="login_btn" onclick="returnResi()" style="width:94%;position:fixed;bottom:2%;left:50%;margin:0 0 0 -47%;">确认</a> -->
