--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT2.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT2.html
@@ -79,19 +79,19 @@ var tzGeneralURL = "%bind(:1)";
 			$("#FanhuiValue").val(countryCode);	
 			//设置返回值
 			var clickId = $("#ParamCon").val();
-			
+//			console.log(clickId);
 			$("#TZ_SCH_COUNTRY").val(countryCode);
 			
 			$("#" + clickId).val(countryDesc);
 			$("#" + clickId).attr("ccode",countryCode);
 			$("#" + clickId).html(countryDesc);
-			$("#TZ_SCH_CNAME_Country").val(countryDesc);
-			$("#TZ_SCH_CNAME_Country").css("color","#333");
-			$("#TZ_SCH_CNAME_Country").attr("ccode",countryCode);
-			console.log("#TZ_SCH_CNAME_Country_1");
-			console.log(countryDesc);
+// 			$("#TZ_SCH_CNAME_Country").val(countryDesc);
+// 			$("#TZ_SCH_CNAME_Country").css("color","#333");
+// 			$("#TZ_SCH_CNAME_Country").attr("ccode",countryCode);
+//			console.log("#TZ_SCH_CNAME_Country_1");
+//			console.log(countryDesc);
 			
-			$("#TZ_SCH_CNAME_Country_1").css("color","#333");
+// 			$("#TZ_SCH_CNAME_Country_1").css("color","#333");
 			$("#" + clickId).html(countryDesc);
 			$("#" + clickId).css("color","#333");
 			
