--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
@@ -17,7 +17,7 @@
 	var BatchId = "%bind(:5)";
 	var AppInsId = "%bind(:6)";
 	var AppTplId = "%bind(:10)";
-	var scoreUrl = "%bind(:1)/dispatcher";
+	var scoreUrl = ContextPath+"/dispatcher";
 	
 	var dfq_arr ;//取数组
 
@@ -84,7 +84,7 @@ th {
 		<div style="text-align:right; " class="r-action">
 			<a href="javascript:void(0);" id="ks_first_page_link"  onclick="ks_first_page();" data-theme="a" data-role="button" data-inline="true" data-icon="home">首页</a>
 			<a href="#modifyPswdPopup"  id="modifyPswd" data-rel="popup" data-role="button" data-inline="true" data-theme="a" data-icon="star" >修改密码</a>
-			<a href="../../logout?type=interview"  id="ks_esc_link" data-rel="dialog" data-theme="a" data-transition="slidedown" data-role="button" data-inline="true" data-icon="delete">退出</a>
+			<a href="../../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="a" data-icon="delete">退出</a>
 		</div>
 		<div data-role="popup" id="modifyPswdPopup" data-position-to="window" data-dismissible="false" data-overlay-theme="b" style="min-width:350px;">
 				<a href="#" data-rel="back" id="closeModify" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">关闭</a>
@@ -224,7 +224,7 @@ th {
  					})
 				</script>
 					<div id="div_bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:auto; height:auto" >
-						<iframe id="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:100%;height:100%;border:0;" src="" name="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)">
+						<iframe id="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:100%;min-height:400px;border:0;" src="" name="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)">
 						</iframe>
 					</div>
 
