--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT2.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT2.html
@@ -79,7 +79,7 @@ var tzGeneralURL = "%bind(:1)";
 			$("#FanhuiValue").val(countryCode);	
 			//设置返回值
 			var clickId = $("#ParamCon").val();
-//			console.log(clickId);
+// 			console.log(clickId);
 			$("#TZ_SCH_COUNTRY").val(countryCode);
 			
 			$("#" + clickId).val(countryDesc);
@@ -93,7 +93,7 @@ var tzGeneralURL = "%bind(:1)";
 			
 // 			$("#TZ_SCH_CNAME_Country_1").css("color","#333");
 			$("#" + clickId).html(countryDesc);
-			$("#" + clickId).css("color","#333");
+// 			$("#" + clickId).css("color","#333");
 			
 			
 			//关闭窗口
