--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MPROVINCE_SELECTOR_HTML2.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MPROVINCE_SELECTOR_HTML2.html
@@ -16,7 +16,7 @@
 		
 		$("#" + clickId).val(province);
 		$("#" + clickId).html(province);
-		$("#" + clickId).css("color","#333");
+// 		$("#" + clickId).css("color","#333");
 		
 		returnResi();
 		//清华MBA
