--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
@@ -115,13 +115,13 @@ th {
 
 				<table style="border:0">
 					<tr >
-						<td><input type="search" name="ks_search_msid" id="ks_search_msid" value=""  placeholder="请输入考生申请号" data-mini="true" data-inline="true" /></td>
+						<td><input type="search" name="ks_search_msid" id="ks_search_msid" value="%bind(:11)"  placeholder="请输入考生申请号" data-mini="true" data-inline="true" /></td>
 						<td>或</td>
-						<td><input type="search" name="ks_search_name" id="ks_search_name" value=""  placeholder="请输入考生姓名" data-mini="true" /></td>
-						<td><input id="ks_search_tz_app_ins_id" name="ks_search_tz_app_ins_id" value="" type="hidden"/></td>
-						<td><input id="ks_iframe_str_id" name="ks_iframe_str_id" value="" type="hidden"/></td>
+						<td><input type="search" name="ks_search_name" id="ks_search_name" value="%bind(:12)"  placeholder="请输入考生姓名" data-mini="true" /></td>
+						<td><input id="ks_search_tz_app_ins_id" name="ks_search_tz_app_ins_id" value="%bind(:6)" type="hidden"/></td>
+						<td><input id="ks_iframe_str_id" name="ks_iframe_str_id" value="%bind(:13)" type="hidden"/></td>
 						<td><input id="ks_show_dfq" name="ks_show_dfq" value="Y"  type="hidden"/></td>
-						<td><input id="ks_show_tz_app_ins_id" name="ks_show_tz_app_ins_id" value="" type="hidden"/></td>
+						<td><input id="ks_show_tz_app_ins_id" name="ks_show_tz_app_ins_id" value="%bind(:6)" type="hidden"/></td>
 					</tr>
 					<tr>
 						<td colspan="3"><div id="ks_look_back_info">请输入考生申请号或姓名进行搜索</div></td>
@@ -138,8 +138,8 @@ th {
 				  	<div data-role="navbar">
 						<ul>
 							<li><a href="#" onclick="show1();"   data-ajax="false"  id = "ks_list">考生列表</a></li>
-							<li><a href="#" onclick="show2();"  class="ui-btn-active ui-state-persist"  data-ajax="false"  id = "ks_bmb">报名表</a></li>
-							<li><a href="#" onclick="show3();" data-ajax="false"   id = "ks_dfq">打分区</a></li>
+							<li><a href="#" onclick="show2();"   class="ui-btn-active ui-state-persist"  data-ajax="false"  id = "ks_bmb">报名表</a></li>
+							<li><a href="#" onclick="show3();"   data-ajax="false"  id = "ks_dfq">打分区</a></li>
 						</ul>
 				   </div>
 		
@@ -193,16 +193,18 @@ th {
 								</div>
 							</p>
 							<p>
-									<b><span  id="ps_clpscj_ck"></span></b>
-									<table width="100%">
-										<div id="ks_dfq_cjx" name="ks_dfq_cjx" style="display:block"></div>
-											<tr>
-												<td colspan='2'>&nbsp;&nbsp;&nbsp;&nbsp;
-													<a href="javascript:void(0);" id="ks_save_bt" onclick="ks_save();"  data-role="button" data-inline="true" data-mini="true" data-icon="check">保 存</a>												
-													<a href="javascript:void(0);"  id="ks_back_bt" onclick="ks_back();"  data-role="button" data-inline="true" data-mini="true" data-icon="back">返回评审界面</a>
-												</td>
-											</tr>
-									</table>
+								<b><span id="ps_clpscj_ck"></span></b>
+							</p>
+							<p>
+								<table width="100%">
+									<div id="ks_dfq_cjx" name="ks_dfq_cjx" style="display:block"></div>
+										<tr>
+											<td colspan='2'>&nbsp;&nbsp;&nbsp;&nbsp;
+												<a href="javascript:void(0);"  id="ks_save_bt" onclick="ks_save();"  data-role="button" data-inline="true" data-mini="true" data-icon="check" data-theme="a">保 存</a>
+												<a href="javascript:void(0);"  id="ks_back_bt" onclick="ks_back();"  data-role="button" data-inline="true" data-mini="true" data-icon="back" data-theme="a">返回评审界面</a>
+											</td>
+										</tr>
+								</table>
 							 </p>
 					   </form>		  
 			    </div>
@@ -210,7 +212,8 @@ th {
 				<div id="div2" style="display:block;width:100%">
 
  				<script type="text/javascript">
- 					$(function(){
+					$(function(){
+						showLoaderThis();
  						var iframe_tmp_id = "bmb_iframe_"+ClassId+"_"+BatchId+"_"+AppInsId;
 						var viewAppFormUrl = ContextPath+"/dispatcher?tzParams="+
 							encodeURI(JSON.stringify({
@@ -219,9 +222,12 @@ th {
 								"OperateType":"HTML",
 								"comParams":{"TZ_APP_INS_ID":AppInsId,"TZ_APP_TPL_ID":AppTplId,"isReview":"Y"}
 								}
-							))
+							));
 						document.getElementById(iframe_tmp_id).src=viewAppFormUrl;
- 					})
+						document.getElementById(iframe_tmp_id).onload=function(){
+							hideLoaderThis();
+						}
+ 					});
 				</script>
 					<div id="div_bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:auto; height:auto" >
 						<iframe id="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:100%;min-height:400px;border:0;" src="" name="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)">
@@ -229,10 +235,6 @@ th {
 					</div>
 
 		       </div>
-
-
-
-
 
 		</div>
 
