手机报名表修改

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
@@ -199,7 +199,7 @@
 					pageno = pageno - 1;
 				}
 	
-				$.each($(".swiper-wrapper li"),function(i,el){
+				$.each($(".nav ul li"),function(i,el){
 					var index = $(this).attr('index');
 					if (pageno == index) {
 						$(this).click();
