--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
@@ -115,9 +115,9 @@ th {
 
 				<table style="border:0">
 					<tr >
-						<td><input type="search" name="ks_search_msid" id="ks_search_msid" value="%bind(:11)"  placeholder="请输入考生申请号" data-mini="true" data-inline="true" /></td>
+						<td><input type="search" name="ks_search_msid" id="ks_search_msid" value=""  placeholder="请输入考生申请号" data-mini="true" data-inline="true" /></td>
 						<td>或</td>
-						<td><input type="search" name="ks_search_name" id="ks_search_name" value="%bind(:12)"  placeholder="请输入考生姓名" data-mini="true" /></td>
+						<td><input type="search" name="ks_search_name" id="ks_search_name" value=""  placeholder="请输入考生姓名" data-mini="true" /></td>
 						<td><input id="ks_search_tz_app_ins_id" name="ks_search_tz_app_ins_id" value="%bind(:6)" type="hidden"/></td>
 						<td><input id="ks_iframe_str_id" name="ks_iframe_str_id" value="%bind(:13)" type="hidden"/></td>
 						<td><input id="ks_show_dfq" name="ks_show_dfq" value="Y"  type="hidden"/></td>
