--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT2.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT2.html
@@ -84,6 +84,7 @@ var tzGeneralURL = "%bind(:1)";
 			
 			$("#" + clickId).val(countryDesc);
 			$("#" + clickId).attr("ccode",countryCode);
+			$("#" + clickId).attr("value",countryDesc);
 			$("#" + clickId).html(countryDesc);
 // 			$("#TZ_SCH_CNAME_Country").val(countryDesc);
 // 			$("#TZ_SCH_CNAME_Country").css("color","#333");
