面试评审评委端PAD版修改

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
@@ -64,7 +64,7 @@ th {
 
 			<div style="text-align:center;float:left;margin-left:6px;" class="r-action">
 				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="a" data-inline="true" data-icon="back">返回</a>
-						&nbsp;欢迎%bind(:3)评委登录MBA面试评审系统&nbsp;%bind(:6) %bind(:7)	
+						&nbsp;欢迎%bind(:3)登录清华经管MBA面试评审系统&nbsp;%bind(:6) %bind(:7)
 			</div>		
 			<div style="text-align:right; " class="r-action">			
 				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="a" data-inline="true" data-icon="home">首页</a>		
