--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_INDEX.html
@@ -109,7 +109,7 @@
 				  $("#list").html(lilist);
 		  	}
 		  
-		  $("#tz_welcome").html("&nbsp;&nbsp;欢迎%bind(:3)评委登录清华经管MBA面试评审系统");
+		  $("#tz_welcome").html("&nbsp;&nbsp;欢迎%bind(:3)登录清华经管MBA面试评审系统");
 
         });
 
