--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_RQTZS_QRCODE_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_RQTZS_QRCODE_HTML.html
@@ -12,5 +12,6 @@
 		<img src="%bind(:2)/statics/images/website/skins/23/del.png" width="15" height="15">
 	</div>
 	<img src="%bind(:1)"/>
+	<p style="margin-top:-25px; color:red; text-align:center; font-size:14px;">微信扫码<br>查看条件录取通知书</p>
 </body>
 </html>
